# fujimoto

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml
.github/workflows/: pre-commit.yml  release.yml  tests.yml
src/: cli.py  config.py  git.py  tmux.py
src/claude_worktree/: cli.py  config.py  git.py  tmux.py
src/fujimoto/: cli.py  config.py  git.py  monitor.py  terminal.py  tmux.py  version.py  version_check.py  vscode.py
src/fujimoto/claude/: __init__.py  log_parser.py
tests/: test_claude_log.py  test_cli.py  test_config.py  test_git.py  test_monitor.py  test_terminal.py  test_tmux.py  test_version.py  test_version_check.py  test_vscode.py
