[project]
name = "fujimoto"
version = "0.1.0"
description = "CLI for managing Claude Code sessions in git worktrees and repositories"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=8.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
fujimoto = "fujimoto.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fujimoto"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
addopts = ["--doctest-modules", "--strict-markers", "-v", "--cov=fujimoto", "--cov-report=term-missing"]
pythonpath = ["src"]

[tool.pytest-asyncio]
mode = "auto"

[tool.coverage.run]
source = ["src/fujimoto"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "if __name__ == .__main__.",
    "pragma: no cover",
]
