[project]
name = "fujimoto"
dynamic = ["version"]
description = "CLI for managing Claude Code sessions in git worktrees and repositories"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Jon Grace-Cox", email = "30441316+jongracecox@users.noreply.github.com" },
]
keywords = ["claude", "claude-code", "tmux", "git-worktree", "tui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Terminals",
]
dependencies = [
    "textual>=8.0.2",
]

[project.urls]
Homepage = "https://github.com/jongracecox/fujimoto"
Issues = "https://github.com/jongracecox/fujimoto/issues"
Repository = "https://github.com/jongracecox/fujimoto"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project.scripts]
fujimoto = "fujimoto.cli:main"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.targets.wheel]
packages = ["src/fujimoto"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ty",
]

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
addopts = ["--doctest-modules", "--strict-markers", "-v", "--cov=fujimoto", "--cov-report=term-missing"]
pythonpath = ["src"]

[tool.pytest-asyncio]
mode = "auto"

[tool.coverage.run]
source = ["src/fujimoto"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "if __name__ == .__main__.",
    "pragma: no cover",
]
